--- a/assets/examples/base.css
+++ b/assets/examples/base.css
@@ -44,6 +44,6 @@ body {
     height: 200px;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
